[gd_scene load_steps=5 format=3 uid="uid://ck87py56ttlps"]

[ext_resource type="Script" uid="uid://kiym51bfso6h" path="res://scenes/player/Attack/Javelin/javelin.gd" id="1_wiclc"]
[ext_resource type="AudioStream" uid="uid://dito18ii4lfnm" path="res://assets/audio/SoundEffect/woosh.wav" id="2_eo7s2"]
[ext_resource type="PackedScene" uid="uid://d38xy2hpbnwaw" path="res://scenes/animations/javelin_animator.tscn" id="3_po67r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kf8dd"]

[node name="Javelin" type="Node2D"]
script = ExtResource("1_wiclc")
level = 0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kf8dd")
disabled = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_eo7s2")

[node name="JavelinAnimator" parent="." instance=ExtResource("3_po67r")]
